--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 					<ul class="alt">
 						<li>
-							<span class="image right"><img src="images/forcast_snr_ver2.pdf" alt="Dark Matter Halos" style="width:400px;height:200px;" /></span>
+							<span class="image right"><img src="images/forcast_snr_ver2-1.png" alt="Dark Matter Halos" style="width:400px;height:200px;" /></span>
 							<p class="content">
 								<a href="https://arxiv.org/abs/2307.11711">
 									<span class="icon fa-newspaper"></span>
