--- a/index.html
+++ b/index.html
@@ -102,14 +102,15 @@
 
 					<ul class="alt">
 						<li>
-							<span class="image right"><img src="images/forcast_snr_ver2-1.png" alt="Dark Matter Halos" style="width:400px;height:200px;" /></span>
+						<!--	<span class="image right"><img src="images/recon_MAP_copy.gif" alt="Dark Matter Halos" style="width:400px;height:200px;" /></span> -->
+						<span class="image right"><img src="images/forcast_snr_ver2-1.png" alt="Dark Matter Halos" style="width:75%;height:75%;" /></span>
 							<p class="content">
 								<a href="https://arxiv.org/abs/2307.11711">
 									<span class="icon fa-newspaper"></span>
 									Cluster profiles from beyond-the-QE CMB lensing mass maps
 								</a><br>
 								<i><b>S. Saha</b>, Louis Legrand, and Julien Carron</i><br>
-								The abundances of the galaxy clusters tell us about the expansion history of the universe. To know the mass calibration, we need to measure the masses of these dark matter halos. We use the lensing of the cosmic microwave background to probe the mass profile of these clusters. The convergence profile of such galaxy clusters is directly connected to the mass of the clusters. We use the maximum a posteriori (MAP) estimator (Carron et al. 2017) to estimate the convergence. This improves the Signal-to-Noise Ratio of mass measurement by 13% for a CMB-S4 like experiment. We provide theoretical forecasts and also apply our estimator on simulations.
+								The abundances of the galaxy clusters tell us about the expansion history of the universe. To know the mass calibration, we need to measure the masses of these dark matter halos. We use the lensing of the cosmic microwave background to probe the mass profile of these clusters. The convergence profile of such galaxy clusters is directly connected to the mass of the clusters. We use the maximum a posteriori (MAP) estimator (Carron et al. 2017) to estimate the convergence. This improves the Signal-to-Noise Ratio of mass measurement by 13-20% for a CMB-S4 like experiment. We provide theoretical forecasts and also apply our estimator on simulations.
 							</p>
 						</li>
 					</ul>
