--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<header id="header" class="alt">
 				<span class="logo"><img src="images/pngwing.com.png" width="120" height="70" alt="Logo" /></span>
 				<h1>Sayan Saha</h1>
-				<p>a PhD candidate in Cosmology</p>
+				<p>Postdoc in Cosmology</p>
 			</header>
 
 			<!-- Nav -->
@@ -59,9 +59,7 @@
 							<header class="major">
 								<h2>Introduction</h2>
 							</header>
-							<p>Welcome to my personal webpage. I am currently enrolled as a Ph.D. candidate under the guidance of <a href="https://sites.google.com/view/tarun-souradeep/"target="_blank">Prof. Tarun Souradeep</a> at the Indian Institute of Science Education and Research (IISER), Pune. I am also a Visiting Researcher in the Department of Astronomy and Astrophysics at the Raman Research Institute (RRI) in Bengaluru.</p>
-							<p>During my Ph.D., I was fortunate to hold a <a href="https://cosmology.unige.ch/users/sayan-saha"target="_blank">Swiss Government Excellence Scholarship</a> (2022-'23) under the guidance of <a href="https://cosmology.unige.ch/users/julien-carron"target="_blank">Prof. Julien Carron</a> at the Department of Theoretical Physics, University of Geneva, where I worked on a segment of my thesis. Here, I share insights and details about my academic journey and research endeavors. I invite you to explore further for a comprehensive view of my work and experiences.</p>
-							<ul class="icons">
+							<p>I am currently a Postdoctoral Research Associate at Northeastern University, working with <a href="https://cos.northeastern.edu/people/jacqueline-mccleary/" target="_blank">Prof. Jacqueline McCleary</a>. I completed my Ph.D. under the guidance of <a href="https://sites.google.com/view/tarun-souradeep/" target="_blank">Prof. Tarun Souradeep</a> at the Indian Institute of Science Education and Research (IISER), Pune. </p> <p>During my Ph.D., I was fortunate to hold a <a href="https://cosmology.unige.ch/users/sayan-saha" target="_blank">Swiss Government Excellence Scholarship</a> (2022-'23) under the guidance of <a href="https://cosmology.unige.ch/users/julien-carron" target="_blank">Prof. Julien Carron</a> at the Department of Theoretical Physics, University of Geneva, where I worked on a portion of my thesis. Here, I share insights and details about my academic journey and research endeavors. I invite you to explore further for a comprehensive view of my work and experiences.</p>							<ul class="icons">
 								<li><a href="mailto:sayan.saha@students.iiserpune.ac.in" class="icon fa-envelope alt"><span class="label">Mail</span></a></li>
 								<li><a href="https://github.com/s-Sayan" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://inspirehep.net/authors/2008786" class="icon fa-newspaper alt"><span class="label">Dribbble</span></a></li>
