--- a/index.html
+++ b/index.html
@@ -212,15 +212,14 @@
 							<p>
 								<i class="fas fa-map-marker-alt"></i>
 								Mailing Address:<br>
-								Office - L220, Astronomy & Astrophysics,<br>
-								Raman Research Institute,<br>
-								C. V. Raman Avenue, 5th Cross Road, Sadashivanagar,<br>
-								Near Mekhri Circle, Bengaluru, Karnataka 560080, India
+								Northeastern University,<br>
+								360 Huntington Ave,<br>
+								Boston, MA 02115, USA
 							</p>
 							<p>
 								<i class="fas fa-envelope"></i>
 								Email:
-								<a href="mailto:sayan.saha@students.iiserpune.ac.in">sayan.saha@students.iiserpune.ac.in</a>
+								<a href="mailto:sa.saha@northeastern.edu">sa.saha@northeastern.edu</a>
 							</p>
 						
 					</section>
